# gpui-workspace

./: Cargo.toml  LICENSE-GPL  README.md
src/: dock.rs  item.rs  lib.rs  pane.rs  pane_group.rs  workspace.rs
